# probe-capacity-invariance

./: .gitignore  Makefile  README.md  ResearchOverview.md  pyproject.toml  recover_backbone.ipynb  seeds.py
configs/: README.md  base.yaml
configs/probe/: ladder.yaml
configs/run/: color_strong.yaml  control_strong.yaml  orientation_strong.yaml  pilot_mps.yaml  position_strong.yaml  reference_cuda.yaml  scale_strong.yaml  supervised.yaml
data/raw/: README.md
data/synthetic/: README.md
modal_app/: phase3_sweep.py
notebooks/: README.md  colab_phase1_reference.ipynb  colab_phase1_seed1.ipynb  kaggle_color_strong_seed10-11.ipynb  kaggle_control_strong_seed8-11.ipynb  kaggle_orientation_scale_strong_seed0-11.ipynb  kaggle_orientation_strong_seed0-11.ipynb  kaggle_phase1_reference.ipynb  kaggle_phase3_sweep.ipynb  kaggle_position_repair.ipynb  kaggle_position_strong_seed10-11.ipynb  kaggle_scale_strong_seed0-11.ipynb  modal_phase3_sweep.ipynb
paper/: main.tex  references.bib
preregistration/: README.md  prereg.md
results/: README.md
src/: __init__.py
src/data/: __init__.py  dsprites.py  registry.py  shapes3d.py  splits.py
src/encoders/: README.md  __init__.py  augmentations.py  backbone.py  projector.py  random_encoder.py  simclr.py  supervised.py  train_simclr.py
src/eval/: README.md  __init__.py  encoder_gate.py  extract.py  figures.py  manifest.py  metrics.py  quality_gate.py
src/probes/: README.md  __init__.py  hypotheses.py  instrument.py  ladder.py  pixel_baseline.py  (+3 more)
tests/: test_figures.py  test_hypotheses.py  test_synthetic_worlds.py
(+4 files in other folders)
