[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "probe-capacity-invariance"
version = "0.0.0"
description = "Controlled study of probe capacity vs. recoverability for contrastive (SimCLR-style) invariance on synthetic factor datasets."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "TODO: choose a license (do not implement yet)" }

# Dependencies are listed but intentionally NOT pinned/configured deeply yet.
# Install with the venv flow in README.md (`pip install -e .`).
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "scipy",
    "scikit-learn",
    "pandas",
    "matplotlib",
    "pyyaml",
    "tqdm",
    "h5py",
]

# `src` is the package root: import as `src.encoders`, `src.data`, etc., and run
# entry points as `python -m src.<module>` from the repo root.
[tool.setuptools]
py-modules = ["seeds"]

[tool.setuptools.packages.find]
include = ["src*"]
